--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       border-radius: 4px;
       height: 3px;
     }
-    
+
     a {
       font-weight: bold;
       text-decoration: none;
       color: inherit;
     }
-    
+
     .style {
       text-align: center;
       padding: 10px;
@@ -68,7 +68,7 @@
     <b style="font-size: 1.3em">Check</b><br />
     <input id="username" type="text" placeholder="@someone"><br />
     (use your forum username, including the @)
-    <div id="thing"></div>
+    <div id="thing" style="transition: opacity .5s; opacity: 0;"></div>
   </div>
   <div id="md" style="display: none"></div>
   <div class="style" style="background-color: hsla(0,0%,255%,0.3); color: hsla(0,0%,255%,0.7); font-style: italic;">This event/competition/challenge is started by me (@Rawrbear) and all the currencies, rewards, and prizes are handled by me, not Hopscotch. You can find other similar self-started events in the <a href="https://forum.gethopscotch.com/c/collabs-requests-competitions/10">Latest Collabs, Requests & Competition Topics</a>, or even start one yourself. Because this is started by me, Hopscotch and the forum leaders are not involved or responsible in any of the transactions here.</div>
@@ -77,6 +77,7 @@
     document.querySelector('#username').addEventListener('keyup', e => {
       if (e.key == 'Enter') {
         document.querySelector('#thing').innerHTML = '<hr />Loading...';
+        document.querySelector('#thing').style.opacity = 1;
         load();
       }
     });
@@ -86,17 +87,22 @@
       req.open('GET', 'HOLDERS.md');
       req.send();
       req.addEventListener('load', () => {
-        document.querySelector('#md').innerHTML = markdownit().render(req.responseText);
-        var found = false;
-        Object.values(document.querySelector('#md').children[2].children[1].children).forEach(v => {
-          if(found) return;
-          if(v.children[0].innerText.toLowerCase() == document.querySelector('#username').value.toLowerCase()) {
-            found = true;
-            document.querySelector('#thing').innerHTML = `<hr /><b>Current balance:</b><br />${v.children[1].innerText}<br /><b>Status Badges:</b><br />${v.children[2].innerText}<br /><b>Transaction Count (Sent or Received):</b><br />${v.children[3].innerText}<br /><b>Monthly Last Redeemed:</b><br />${v.children[4].innerText}<br /><b>Suspension Status:</b><br />${v.children[5].innerText}`;
-          }
-        });
-        if(!found) document.querySelector('#thing').innerHTML = '<hr />You don\'t seem to have a balloon...';
-        document.querySelector('#md').innerHTML = '';
+        document.querySelector('#thing').style.opacity = 0;
+        setTimeout(() => {
+          document.querySelector('#md').innerHTML = markdownit().render(req.responseText);
+          var found = false;
+          Object.values(document.querySelector('#md').children[2].children[1].children).forEach(v => {
+            if (found) return;
+            if (v.children[0].innerText.toLowerCase() == document.querySelector('#username').value.toLowerCase()) {
+              found = true;
+              document.querySelector('#thing').innerHTML = `<hr /><b>Current balance:</b><br />${v.children[1].innerText}<br /><b>Status Badges:</b><br />${v.children[2].innerText}<br /><b>Transaction Count (Sent or Received):</b><br />${v.children[3].innerText}<br /><b>Monthly Last Redeemed:</b><br />${v.children[4].innerText}<br /><b>Suspension Status:</b><br />${v.children[5].innerText}`;
+              document.querySelector('#thing').style.opacity = 1;
+            }
+          });
+          if (!found) document.querySelector('#thing').innerHTML = '<hr />You don\'t seem to have a balloon...';
+          document.querySelector('#md').innerHTML = '';
+          document.querySelector('#thing').style.opacity = 1;
+        }, 500);
       });
     }
   </script>
