--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <title>Balloons 🎈</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/markdown-it@12.1.0/dist/markdown-it.min.js"></script>
   <style>
     body {
       color: #fff;
       background: linear-gradient(to bottom left, #78B8DA, #0BC3BF);
       background-color: #0BC3BF;
-      font-family: 'Ubuntu', -apple-system, BlinkMacSystemFont, sans-serif;
+      font-family: 'Red Hat Text', -apple-system, BlinkMacSystemFont, sans-serif;
     }
 
     #check {
