--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               document.querySelector('#thing').style.opacity = 1;
             }
           });
-          if (!found) document.querySelector('#thing').innerHTML = '<hr />You don\'t seem to have a balloon...';
+          if (!found) document.querySelector('#thing').innerHTML = '<hr />Apparently you\'re not on the list...';
           document.querySelector('#md').innerHTML = '';
           document.querySelector('#thing').style.opacity = 1;
         }, 500);
