--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <title>Balloons 🎈</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://wafflestuff.vercel.app/cantarell/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/markdown-it@12.1.0/dist/markdown-it.min.js"></script>
   <style>
     body {
       color: #fff;
       background: linear-gradient(to bottom left, #78B8DA, #0BC3BF);
       background-color: #0BC3BF;
-      font-family: 'Cantarell', -apple-system, BlinkMacSystemFont, sans-serif;
+      font-family: 'Red Hat Display', -apple-system, BlinkMacSystemFont, sans-serif;
     }
     
     b, h1 {
