--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Balloons 🎈</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700;900&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/markdown-it@12.1.0/dist/markdown-it.min.js"></script>
   <style>
     body {
@@ -11,6 +11,10 @@
       background: linear-gradient(to bottom left, #78B8DA, #0BC3BF);
       background-color: #0BC3BF;
       font-family: 'Red Hat Display', -apple-system, BlinkMacSystemFont, sans-serif;
+    }
+    
+    b, h1 {
+      font-weight: 800;
     }
 
     #check {
@@ -57,7 +61,7 @@
 
 <body>
   <div style="text-align: center; font-size: 2.8em; font-weight: 800;"><img src="logo.png" style="height: 18rem; width: auto; margin: -1em auto;"><br />Balloons 🎈</div>
-  <div style="text-align: center; font-size: 1.4em; font-weight: bold">The open currency.</div>
+  <div style="text-align: center; font-size: 1.4em">The open currency.</div>
   <br />
   <div class="style" style="background-color: #00b279">The currency we’ve all been wanting - stop using seeds for commissions, and start spending with an open source currency that’s easy to use!</div>
   <div class="style" style="background-color: #4a00aa"><b>It’s so easy to make transactions ✨</b><br />When you and a shopholder/commissioner have reached a consensus, just ping the current currency maintainer and tell them you’d like to make a transaction with a shop owner! They’ll get back to it as soon as possible.</div>
