--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>🎈 Balloons</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="icon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
