Fixed "see holders" buttons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="sc" style="background-image: url('a.jpg')"><div>
         <h1>An open currency for Hopscotch Forumers.</h1>
         <div>
-          <a href="https://rawrbearhs.github.io/balloons/HOLDERS.md" target="_blank"><button class="btn">SEE HOLDERS</button></a>
+          <a href="https://github.com/RawrbearHS/balloons/blob/main/HOLDERS.md" target="_blank"><button class="btn">SEE HOLDERS</button></a>
         </div></div>
       </div>
       <div class="sc" style="background-image: url('e.jpg')">
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div id="menu">
-      <a href="https://rawrbearhs.github.io/balloons/HOLDERS.md">Holders</a><a href="https://forum.gethopscotch.com/c/shops-and-requests">Shops</a><a>Stocks</a><a onclick="opene(false)">Close</a>
+      <a href="https://github.com/RawrbearHS/balloons/blob/main/HOLDERS.md">Holders</a><a href="https://forum.gethopscotch.com/c/shops-and-requests">Shops</a><a>Stocks</a><a onclick="opene(false)">Close</a>
     </div>
     <script src="menu.js" charset="utf-8"></script>
   </body>
