Reorganized file structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>🎈 Balloons</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
@@ -14,13 +14,13 @@
       <span class="mm s" onclick="opene(true)" title="Menu"><i class='bx bx-menu'></i></span>
     </div>
     <div class="aa">
-      <div class="sc" style="background-image: url('a.jpg')"><div>
+      <div class="sc" style="background-image: url('assets/img/a.jpg')"><div>
         <h1>An open currency for Hopscotch Forumers.</h1>
         <div>
           <a href="https://github.com/RawrbearHS/balloons/blob/main/HOLDERS.md" target="_blank"><button class="btn">SEE HOLDERS</button></a>
         </div></div>
       </div>
-      <div class="sc" style="background-image: url('e.jpg')">
+      <div class="sc" style="background-image: url('assets/img/e.jpg')">
         <div>
           <h1>Find your next game art.</h1>
           <div>
@@ -32,7 +32,7 @@
           </div>
         </div>
       </div>
-      <div class="sc" style="background-image: url('c.jpg')">
+      <div class="sc" style="background-image: url('assets/img/c.jpg')">
         <div>
           <h1>Invest in creators, and grow your holdings.</h1>
           <div>
@@ -48,6 +48,6 @@
     <div id="menu">
       <a href="https://github.com/RawrbearHS/balloons/blob/main/HOLDERS.md">Holders</a><a href="https://forum.gethopscotch.com/c/shops-and-requests">Shops</a><a>Stocks</a><a onclick="opene(false)">Close</a>
     </div>
-    <script src="menu.js" charset="utf-8"></script>
+    <script src="src/menu.js" charset="utf-8"></script>
   </body>
 </html>
