Fixed another holders link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="head">
-      <span><img src="https://openmoji.org/data/color/svg/1F388.svg" alt="Balloons Icon" class="icon"><span class="hw">Balloons</span></span><span class="mm d"><a href="https://rawrbearhs.github.io/balloons/HOLDERS.md">Holders</a> <a href="https://forum.gethopscotch.com/c/shops-and-requests">Shops</a> <a>Stocks</a></span>
+      <span><img src="https://openmoji.org/data/color/svg/1F388.svg" alt="Balloons Icon" class="icon"><span class="hw">Balloons</span></span><span class="mm d"><a href="https://github.com/RawrbearHS/balloons/blob/main/HOLDERS.md">Holders</a> <a href="https://forum.gethopscotch.com/c/shops-and-requests">Shops</a> <a>Stocks</a></span>
       <span class="mm s" onclick="opene(true)" title="Menu"><i class='bx bx-menu'></i></span>
     </div>
     <div class="aa">
