Reorganized; hid stocks sections

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   </head>
   <body>
     <div class="head">
-      <span><img src="https://openmoji.org/data/color/svg/1F388.svg" alt="Balloons Icon" class="icon"><span class="hw">Balloons</span></span><span class="mm d"><a href="https://github.com/RawrbearHS/balloons/blob/main/HOLDERS.md">Holders</a> <a href="https://forum.gethopscotch.com/c/shops-and-requests">Shops</a> <a>Stocks</a></span>
+      <span><img src="https://openmoji.org/data/color/svg/1F388.svg" alt="Balloons Icon" class="icon"><span class="hw">Balloons</span></span>
+      <span class="mm d">
+        <a href="https://github.com/RawrbearHS/balloons/blob/main/HOLDERS.md">Holders</a>
+        <a href="https://forum.gethopscotch.com/c/shops-and-requests">Shops</a>
+        <!-- a>Stocks</a -->
+      </span>
       <span class="mm s" onclick="opene(true)" title="Menu"><i class='bx bx-menu'></i></span>
     </div>
     <div class="aa">
@@ -32,7 +37,7 @@
           </div>
         </div>
       </div>
-      <div class="sc" style="background-image: url('assets/img/c.jpg')">
+      <!-- div class="sc" style="background-image: url('assets/img/c.jpg')">
         <div>
           <h1>Invest in creators, and grow your holdings.</h1>
           <div>
@@ -44,9 +49,12 @@
           </div>
         </div>
       </div>
-    </div>
+    </div -->
     <div id="menu">
-      <a href="https://github.com/RawrbearHS/balloons/blob/main/HOLDERS.md">Holders</a><a href="https://forum.gethopscotch.com/c/shops-and-requests">Shops</a><a>Stocks</a><a onclick="opene(false)">Close</a>
+      <a href="https://github.com/RawrbearHS/balloons/blob/main/HOLDERS.md">Holders</a>
+      <a href="https://forum.gethopscotch.com/c/shops-and-requests">Shops</a>
+      <!-- a>Stocks</a -->
+      <a onclick="opene(false)">Close</a>
     </div>
     <script src="src/menu.js" charset="utf-8"></script>
   </body>
