Replace links with newer holders list

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="head">
       <span><img src="https://openmoji.org/data/color/svg/1F388.svg" alt="Balloons Icon" class="icon"><span class="hw">Balloons</span></span>
       <span class="mm d">
-        <a href="https://github.com/RawrbearHS/balloons/blob/main/HOLDERS.md">Holders</a>
+        <a href="https://balloons-hs.vercel.app/holders">Holders</a>
         <a href="https://forum.gethopscotch.com/c/shops-and-requests">Shops</a>
         <!-- a>Stocks</a -->
       </span>
@@ -22,7 +22,7 @@
       <div class="sc" style="background-image: url('assets/img/a.jpg')"><div>
         <h1>An open currency for Hopscotch Forumers.</h1>
         <div>
-          <a href="https://github.com/RawrbearHS/balloons/blob/main/HOLDERS.md" target="_blank"><button class="btn">SEE HOLDERS</button></a>
+          <a href="https://balloons-hs.vercel.app/holders" target="_blank"><button class="btn">SEE HOLDERS</button></a>
         </div></div>
       </div>
       <div class="sc" style="background-image: url('assets/img/e.jpg')">
@@ -51,7 +51,7 @@
       </div>
     </div -->
     <div id="menu">
-      <a href="https://github.com/RawrbearHS/balloons/blob/main/HOLDERS.md">Holders</a>
+      <a href="https://balloons-hs.vercel.app/holders">Holders</a>
       <a href="https://forum.gethopscotch.com/c/shops-and-requests">Shops</a>
       <!-- a>Stocks</a -->
       <a onclick="opene(false)">Close</a>
